RW - Cart Page UI Changes
RW - Cart Page UI Changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created using create-react-appRubio's Restaurants proudly serve delicious, coastal inspired fish tacos, seafood, & other dishes. Visit one near you to experience fresh coastal Mexican food."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rubio's Coastal Grill</title>
+    <title>Coastal Inspired Fresh Mexican Food | Rubio's</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
