--- a/punchh_sig_gen.html
+++ b/punchh_sig_gen.html
@@ -49,7 +49,7 @@
                       <div class='form-group'>
                         <label for='clientSecret'>Punchh Client Secret</label>
                         <input id='clientSecret' type='text' class='form-control' readonly
-                               value='c7f0b80300f53da0f25b52b06c8b9b89afcb47397e8e2c1f3fe9b58200171a41' />
+                               value='a2e83d96525d4d6d3db3823ec86cbd0d935f223f9d7e8df6167187cb95e7fbca' />
                       </div>
                       <div class='form-group'>
                         <label for='apiUri'>API Uri</label>
@@ -107,8 +107,7 @@
       var uri = new URL(url?.toString());
       const body = document.getElementById('payload').value;
       let uriData = uri.pathname.concat(uri.search);
-      let secret = document.getElementById('clientSecret').value;
-      let secretString = secret.toString();
+      let secretString =  document.getElementById('clientSecret').value;
       let concatString = '';
       if (body === undefined) {
         concatString = uriData;
