--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,8 @@
         <img src="./logo.png" />
       </div>
     </div>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0&appId=3126327474351480&autoLogAppEvents=1" nonce="QeyC3GZZ"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
