--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
           justify-content: center;
         "
       >
-        <img src="./logo.png" />
+        <img src="%PUBLIC_URL%/logo.png" />
       </div>
     </div>
 
