--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-<!--    <div id="fb-root"></div>-->
-<!--    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0&appId=3126327474351480&autoLogAppEvents=1" nonce="QeyC3GZZ"></script>-->
     <div id="root">
       <div
         style="
@@ -42,7 +40,7 @@
           justify-content: center;
         "
       >
-        <img src="%PUBLIC_URL%/logo.png" />
+        <img id="main-site-loading-logo" src="%PUBLIC_URL%/logo.png" />
       </div>
     </div>
     <!--
@@ -57,3 +55,9 @@
     -->
   </body>
 </html>
+
+<script>
+  if(window.location.href.toLocaleLowerCase().indexOf('/iframe') !== -1){
+    document.getElementById('main-site-loading-logo').style.display = 'none';
+  }
+</script>
