--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
     </div>
 
 
-    <div class="credit-card-info-div" />
-    <div class="cvv-info-div" />
+<!--    <div class="credit-card-info-div" />-->
+<!--    <div class="cvv-info-div" />-->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -67,7 +67,6 @@
     document.getElementById('main-site-loading-logo').style.display = 'none';
   }
 </script>
-//Sandbox
 <script src="https://olocdnsandbox.s3.amazonaws.com/web-client/checkout-web-client/2.5.0/checkout.js"></script>
 
 
