removed onetrust Banner Script

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- OneTrust Cookies Consent Notice start for rubioslivedev.wpengine.com -->
-    <script type="text/javascript">
-      function OptanonWrapper() { }
-    </script>
+<!--    <script type="text/javascript">-->
+<!--      function OptanonWrapper() { }-->
+<!--    </script>-->
     <!-- OneTrust Cookies Consent Notice end for rubioslivedev.wpengine.com -->
 
     <!--
