--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Rubio's Restaurants proudly serve delicious, coastal inspired fish tacos, seafood, & other dishes. Visit one near you to experience fresh coastal Mexican food."
+      content="Order online for quick & easy pick-up or delivery. Satisfy your cravings for Baja-inspired, Mexican flavors."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
