--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta
       name="description"
       content="Order online for quick & easy pick-up or delivery. Satisfy your cravings for Baja-inspired, Mexican flavors."
+      data-react-helmet="true"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
