--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- OneTrust Cookies Consent Notice start for order.rubios.com -->
+      <script src=https://cdn.cookielaw.org/scripttemplates/otSDKStub.js  type="text/javascript" charset="UTF-8" data-domain-script="a6153c75-b5b2-42b6-b655-78dfacd0c48b-test" ></script>
+      <script type="text/javascript">
+      function OptanonWrapper() { }
+      </script>
+    <!-- OneTrust Cookies Consent Notice end for order.rubios.com -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
