--- a/public/ccsf.html
+++ b/public/ccsf.html
@@ -25,10 +25,10 @@
           cvvElement: "cvv-info-div",
         });
         checkoutFrame.initialize({
-          brandAccessId: "WX9GUJ9L6T2wwj2mPw_OGB9HM9ThJNPL",
-          basketGuid: "547a1fc8-695f-456c-a87d-dd0f83301ff8",
-          // brandAccessId: brandAccessId,
-          // basketGuid: basketId,
+//           brandAccessId: "WX9GUJ9L6T2wwj2mPw_OGB9HM9ThJNPL",
+//           basketGuid: "547a1fc8-695f-456c-a87d-dd0f83301ff8",
+          brandAccessId: brandAccessId,
+          basketGuid: basketId,
           styles: {
             cardNumber: "font-size: 16px; height: 40px;padding-top: 5px;border-top-width: 0px;border-right-width: 0px;border-bottom-width: 0px;border-left-width: 0px; width: 100%",
             cvv: "font-size: 14px; height: 50px;padding-top: 5px;border-top-width: 0px;border-right-width: 0px;border-bottom-width: 0px;border-left-width: 0px; width: 100%"
@@ -71,7 +71,7 @@
     });
   </script>
 </head>
-<!-- <style>
+<style>
     #payload {
         display: none;
     }
@@ -84,7 +84,7 @@
     #submitButton{
         display: none;
     }
-</style> -->
+</style>
 <body>
 <div style="display: contents">
   <p style="font-size: 14px">Card Number</p>
