--- a/public/ccsf.html
+++ b/public/ccsf.html
@@ -100,14 +100,14 @@
   <p class="inputLabel">Card Number</p>
   <div class="fieldContainer">
     <div class="credit-card-info-div" style="height: 50px;"></div>
-    <img src="card-icon.png" height="35" width="47">
+    <img src="./card-icon.png" height="35" width="47">
   </div>
 </div>
 <div style="display: contents">
   <p class="inputLabel">CVV</p>
   <div class="fieldContainer">
     <div class="cvv-info-div" style="height: 50px;"></div>
-    <img src="ccv-icon.png" height="35" width="47">
+    <img src="./ccv-icon.png" height="35" width="47">
   </div>
 </div>
 <div>
