--- a/public/index.html
+++ b/public/index.html
@@ -71,39 +71,22 @@
   </body>
 </html>
 
-
-
 <script>
-  if(window.location.href.toLocaleLowerCase().indexOf('/iframe') !== -1){
+  const pathName = window?.location?.href?.toLocaleLowerCase() || '';
+  if(pathName.indexOf('/checkout') !== -1) {
+    // Added olo payment script
+    const externalScript = document.createElement('script');
+    document.body.appendChild(externalScript);
+    externalScript.src =
+      '%REACT_APP_NODE_ENV%' === 'production'
+        ? `https://static.olocdn.net/web-client/checkout-web-client/2.5.0/checkout.js`
+        : 'https://olocdnsandbox.s3.amazonaws.com/web-client/checkout-web-client/2.5.0/checkout.js';
+  }
+  if(pathName.indexOf('/iframe') !== -1){
+    // removed loading logo for iframe
     document.getElementById('main-site-loading-logo').style.display = 'none';
   }
 </script>
-<!--<script>-->
-<!--  // Get the modal-->
-<!--  var modal = document.getElementById("myModal");-->
 
-<!--  // Get the button that opens the modal-->
-<!--  var btn = document.getElementById("myBtn");-->
-
-<!--  // Get the <span> element that closes the modal-->
-<!--  var span = document.getElementsByClassName("close")[0];-->
-
-<!--  // When the user clicks the button, open the modal-->
-<!--  btn.onclick = function() {-->
-<!--    modal.style.display = "block";-->
-<!--  }-->
-
-<!--  // When the user clicks on <span> (x), close the modal-->
-<!--  span.onclick = function() {-->
-<!--    modal.style.display = "none";-->
-<!--  }-->
-
-<!--  // When the user clicks anywhere outside of the modal, close it-->
-<!--  window.onclick = function(event) {-->
-<!--    if (event.target == modal) {-->
-<!--      modal.style.display = "none";-->
-<!--    }-->
-<!--  }-->
-<!--</script>-->
 
 
